--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,20 @@
-.App {
+html, body {
   text-align: center;
+  background-image: url("https://previews.123rf.com/images/pachaileknettip/pachaileknettip1509/pachaileknettip150900216/45204633-corkboard-texture-background.jpg");
+  height: 100%;
+  min-height: 100%;
+  background-size: cover;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
+.App{
+  display:flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.post{
+  max-width: 300px;
+  margin: 0 auto;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h1{
+  text-align: center;
 }
